--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="produtos-grid">
                     <div class="produto-card">
                         <div class="produto-imagem">
-                            <img src="images/climatizador-1.jpg" alt="Climatizador Industrial">
+                            <img src="images/climatizador2.jpg" alt="Climatizador Industrial">
                         </div>
                         <div class="produto-info">
                             <h4 class="produto-titulo">Climatizador Industrial</h4>
@@ -92,10 +92,10 @@
 
                     <div class="produto-card">
                         <div class="produto-imagem">
-                            <img src="images/climatizador-2.jpg" alt="Climatizador Evaporativo">
+                            <img src="images/pro2.jpeg" alt="Climatizador Evaporativo">
                         </div>
                         <div class="produto-info">
-                            <h4 class="produto-titulo">Climatizador Evaporativo</h4>
+                            <h4 class="produto-titulo">Climatizador Portátil</h4>
                             <p class="produto-descricao">
                                 Climatizador evaporativo versátil para ambientes médios. 
                                 Solução eficaz para controle de temperatura em diversos espaços.
@@ -122,10 +122,10 @@
                 <div class="produtos-grid">
                     <div class="produto-card">
                         <div class="produto-imagem">
-                            <img src="images/aquecedor-1.jpg" alt="Aquecedor a Gás Industrial">
+                            <img src="images/aquecedor2.jpg" alt="Aquecedor a Gás Industrial">
                         </div>
                         <div class="produto-info">
-                            <h4 class="produto-titulo">Aquecedor a Gás Industrial</h4>
+                            <h4 class="produto-titulo">Aquecedor a Gás Torre</h4>
                             <p class="produto-descricao">
                                 Aquecedor a gás de alta potência para ambientes industriais e eventos. 
                                 Aquecimento rápido e eficiente mesmo em grandes espaços.
@@ -143,10 +143,10 @@
 
                     <div class="produto-card">
                         <div class="produto-imagem">
-                            <img src="images/aquecedor-2.jpg" alt="Aquecedor de Água a Gás">
+                            <img src="images/piramide2.jpeg" alt="Aquecedor a Gás">
                         </div>
                         <div class="produto-info">
-                            <h4 class="produto-titulo">Aquecedor de Água a Gás</h4>
+                            <h4 class="produto-titulo">Aquecedor a Gás Pirâmide</h4>
                             <p class="produto-descricao">
                                 Aquecedor de água a gás para eventos e instalações temporárias. 
                                 Fornecimento contínuo de água quente com eficiência energética.
