Revert "fix site"
This reverts commit 0ec84fecaf14abcebef1ac96c671dbe01d07bd8e.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Locus Locações: Especialista em locação de climatizadores e aquecedores de alta performance para eventos, indústrias e projetos em todo o Brasil. Qualidade e conforto térmico garantidos.">ntos, indústrias e projetos em todo o Brasil. Qualidade e conforto térmico garantidos.">
-    <<title>Locus Locações | Locação de Climatizadores e Aquecedores para Eventos e Indústrias</title>es para Eventos e Indústrias</title>
+    <meta name="description" content="Locus Locações - Especializada em locação de climatizadores e aquecedores para eventos e projetos.">
+    <title>Locus Locações - Climatizadores e Aquecedores</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -111,9 +111,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn-ver-todos">
-                    <a href="climatizadores.html" class="btn btn-secondary">Ver todos os modelos</a>
-                </div>
             </div>
 
             <!-- Aquecedores -->
@@ -165,9 +162,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn-ver-todos">
-                    <a href="aquecedores.html" class="btn btn-secondary">Ver todos os modelos</a>
-                </div>
             </div>
         </div>
     </section>
@@ -205,7 +199,7 @@
             <!-- Depoimentos -->
             <div class="depoimentos">
                 <h3 class="depoimentos-titulo">Depoimentos</h3>
-                <div class="depoimentos-grid" id="depoimentosCarousel">
+                <div class="depoimentos-grid">
                     <div class="depoimento-card">
                         <div class="estrelas">
                             <i class="fas fa-star"></i>
@@ -233,34 +227,6 @@
                             durante todo o evento. Recomendo!"
                         </p>
                         <p class="depoimento-autor">- João Santos, Produtor</p>
-                    </div>
-                    <!-- Depoimento 3 (Exemplo para o carrossel) -->
-                    <div class="depoimento-card" style="display: none;">
-                        <div class="estrelas">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <p class="depoimento-texto">
-                            "Os aquecedores foram essenciais para o nosso evento de inverno. Atendimento e suporte impecáveis. Recomendo a Locus!"
-                        </p>
-                        <p class="depoimento-autor">- Pedro Rocha, Organizador de Eventos</p>
-                    </div>
-                    <!-- Depoimento 4 (Exemplo para o carrossel) -->
-                    <div class="depoimento-card" style="display: none;">
-                        <div class="estrelas">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <p class="depoimento-texto">
-                            "Qualidade superior e pontualidade na entrega e retirada dos equipamentos. A Locus Locações é nossa parceira oficial."
-                        </p>
-                        <p class="depoimento-autor">- Ana Costa, Gerente de Logística</p>
                     </div>
                 </div>
             </div>
