--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <!-- Depoimentos -->
             <div class="depoimentos">
                 <h3 class="depoimentos-titulo">Depoimentos</h3>
-                <div class="depoimentos-grid">
+                <div class="depoimentos-grid" id="depoimentosCarousel">
                     <div class="depoimento-card">
                         <div class="estrelas">
                             <i class="fas fa-star"></i>
@@ -233,6 +233,34 @@
                             durante todo o evento. Recomendo!"
                         </p>
                         <p class="depoimento-autor">- João Santos, Produtor</p>
+                    </div>
+                    <!-- Depoimento 3 (Exemplo para o carrossel) -->
+                    <div class="depoimento-card" style="display: none;">
+                        <div class="estrelas">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="depoimento-texto">
+                            "Os aquecedores foram essenciais para o nosso evento de inverno. Atendimento e suporte impecáveis. Recomendo a Locus!"
+                        </p>
+                        <p class="depoimento-autor">- Pedro Rocha, Organizador de Eventos</p>
+                    </div>
+                    <!-- Depoimento 4 (Exemplo para o carrossel) -->
+                    <div class="depoimento-card" style="display: none;">
+                        <div class="estrelas">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="depoimento-texto">
+                            "Qualidade superior e pontualidade na entrega e retirada dos equipamentos. A Locus Locações é nossa parceira oficial."
+                        </p>
+                        <p class="depoimento-autor">- Ana Costa, Gerente de Logística</p>
                     </div>
                 </div>
             </div>
@@ -287,7 +315,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Localização</h4>
-                            <p>Av. Joaquim Duarte Moleirinho, 4392 - Jardim Cidade Moncoes, Maringá - PR, 87060-350</p>
+                            <p>Maringá - PR - Brasil</p>
                         </div>
                     </div>
                     <div class="info-card whatsapp-card">
