--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Localização</h4>
-                            <p>Maringá - PR - Brasil</p>
+                            <p>Av. Joaquim Duarte Moleirinho, 4392 - Jardim Cidade Moncoes, Maringá - PR, 87060-350</p>
                         </div>
                     </div>
                     <div class="info-card whatsapp-card">
