--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <ul class="produto-features">
                                 <li><i class="fas fa-check-circle"></i> Alta capacidade de resfriamento</li>
                                 <li><i class="fas fa-check-circle"></i> Baixo consumo de energia</li>
-                                <li><i class="fas fa-check-circle"></i> Portátil e fácil de instalar</li>
+                                <li><i class="fas fa-check-circle"></i> Portátil e fácil de instalar.</li>
                             </ul>
                             <button class="btn btn-produto" onclick="solicitarOrcamento('Climatizador Industrial')">
                                 Solicitar Orçamento
