--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="imagex/png" href="images/icon.ico">
     <meta name="description" content="Locus Locações: Especialista em locação de climatizadores e aquecedores de alta performance para eventos, indústrias e projetos em todo o Brasil. Qualidade e conforto térmico garantidos.">ntos, indústrias e projetos em todo o Brasil. Qualidade e conforto térmico garantidos.">
     <<title>Locus Locações | Locação de Climatizadores e Aquecedores para Eventos e Indústrias</title>es para Eventos e Indústrias</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -82,7 +83,7 @@
                             <ul class="produto-features">
                                 <li><i class="fas fa-check-circle"></i> Alta capacidade de resfriamento</li>
                                 <li><i class="fas fa-check-circle"></i> Baixo consumo de energia</li>
-                                <li><i class="fas fa-check-circle"></i> Portátil e fácil de instalar.</li>
+                                <li><i class="fas fa-check-circle"></i> Portátil e fácil de instalar</li>
                             </ul>
                             <button class="btn btn-produto" onclick="solicitarOrcamento('Climatizador Industrial')">
                                 Solicitar Orçamento
@@ -112,7 +113,7 @@
                     </div>
                 </div>
                 <div class="btn-ver-todos">
-                    <a href="climatizadores.html" class="btn btn-secondary">Ver todos os modelos</a>
+                    <a href="climatizadores" class="btn btn-secondary">Ver todos os modelos</a>
                 </div>
             </div>
 
@@ -155,7 +156,7 @@
                                 Fornecimento contínuo de água quente com eficiência energética.
                             </p>
                             <ul class="produto-features">
-                                <li><i class="fas fa-check-circle"></i> Água quente contínua</li>
+                                <li><i class="fas fa-check-circle"></i> Ambiente aconchegante</li>
                                 <li><i class="fas fa-check-circle"></i> Eficiência energética</li>
                                 <li><i class="fas fa-check-circle"></i> Instalação rápida</li>
                             </ul>
@@ -166,7 +167,7 @@
                     </div>
                 </div>
                 <div class="btn-ver-todos">
-                    <a href="aquecedores.html" class="btn btn-secondary">Ver todos os modelos</a>
+                    <a href="aquecedores" class="btn btn-secondary">Ver todos os modelos</a>
                 </div>
             </div>
         </div>
@@ -344,7 +345,7 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
