--- a/index.html
+++ b/index.html
@@ -309,15 +309,19 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>E-mail</h4>
-                            <p>comercial@locuslocacoes.com.br</p>
+                            <p>adm@locuslocacoes.com.br</p>
                         </div>
                     </div>
                     <div class="info-card">
                         <i class="fas fa-map-marker-alt"></i>
-                        <div>
-                            <h4>Localização</h4>
-                            <p>Av. Joaquim Duarte Moleirinho, 4392 - Jardim Cidade Moncoes, Maringá - PR, 87060-350</p>
-                        </div>
+			<div>
+    			    <h4>Localização</h4>
+    				<p>
+        			   <a href="https://maps.app.goo.gl/ZW47XpXBn8RKtSgc8" target="_blank" style="color: inherit; text-decoration: none;">
+            				Av. Joaquim Duarte Moleirinho, 4392 - Jardim Cidade Monções, Maringá - PR, 87060-350 </a>
+    				</p>
+			</div>
+
                     </div>
                     <div class="info-card whatsapp-card">
                         <i class="fab fa-whatsapp"></i>
