--- a/climatizadores.html
+++ b/climatizadores.html
@@ -153,6 +153,14 @@
         <div class="container">
             <p>&copy; 2025 <span class="footer-logo">LOCUS Locações</span>. Todos os direitos reservados.</p>
             <p class="footer-subtitle">Especializada em locação de climatizadores e aquecedores</p>
+            <div class="social-links">
+                <a href="URL_DO_SEU_INSTAGRAM" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="URL_DO_SEU_FACEBOOK" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </div>
         </div>
     </footer>
 
