--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="imagex/png" href="images/icon.ico">
-    <meta name="description" content="Locus Locações: Especialista em locação de climatizadores e aquecedores de alta performance para eventos, indústrias e projetos em todo o Brasil. Qualidade e conforto térmico garantidos.">ntos, indústrias e projetos em todo o Brasil. Qualidade e conforto térmico garantidos.">
-    <<title>Locus Locações | Locação de Climatizadores e Aquecedores para Eventos e Indústrias</title>es para Eventos e Indústrias</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta name="description"
+        content="Locus Locações: Especialista em locação de climatizadores e aquecedores de alta performance para eventos, indústrias e projetos em todo o Brasil. Qualidade e conforto térmico garantidos.">
+    ntos, indústrias e projetos em todo o Brasil. Qualidade e conforto térmico garantidos.">
+    <<title>Locus Locações | Locação de Climatizadores e Aquecedores para Eventos e Indústrias</title>es para Eventos e
+        Indústrias</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <!-- Header -->
     <header class="header">
@@ -44,7 +49,7 @@
                     <span class="hero-locacoes">Locações</span>
                 </h1>
                 <p class="hero-description">
-                    Especializada em locação de climatizadores e aquecedores para eventos e projetos. 
+                    Especializada em locação de climatizadores e aquecedores para eventos e projetos.
                     Atendimento de excelência e equipamentos modernos.
                 </p>
                 <div class="hero-buttons">
@@ -77,7 +82,7 @@
                         <div class="produto-info">
                             <h4 class="produto-titulo">Climatizador Industrial</h4>
                             <p class="produto-descricao">
-                                Climatizador evaporativo de alta capacidade, ideal para grandes ambientes e eventos. 
+                                Climatizador evaporativo de alta capacidade, ideal para grandes ambientes e eventos.
                                 Proporciona resfriamento eficiente e econômico.
                             </p>
                             <ul class="produto-features">
@@ -98,7 +103,7 @@
                         <div class="produto-info">
                             <h4 class="produto-titulo">Climatizador Portátil</h4>
                             <p class="produto-descricao">
-                                Climatizador evaporativo versátil para ambientes médios. 
+                                Climatizador evaporativo versátil para ambientes médios.
                                 Solução eficaz para controle de temperatura em diversos espaços.
                             </p>
                             <ul class="produto-features">
@@ -131,7 +136,7 @@
                         <div class="produto-info">
                             <h4 class="produto-titulo">Aquecedor a Gás Torre</h4>
                             <p class="produto-descricao">
-                                Aquecedor a gás de alta potência para ambientes industriais e eventos. 
+                                Aquecedor a gás de alta potência para ambientes industriais e eventos.
                                 Aquecimento rápido e eficiente mesmo em grandes espaços.
                             </p>
                             <ul class="produto-features">
@@ -152,7 +157,7 @@
                         <div class="produto-info">
                             <h4 class="produto-titulo">Aquecedor a Gás Pirâmide</h4>
                             <p class="produto-descricao">
-                                Aquecedor de água a gás para eventos e instalações temporárias. 
+                                Aquecedor de água a gás para eventos e instalações temporárias.
                                 Fornecimento contínuo de água quente com eficiência energética.
                             </p>
                             <ul class="produto-features">
@@ -181,23 +186,27 @@
                 <div class="sobre-card">
                     <h3>Missão</h3>
                     <p>
-                        Fornecer soluções de locação de equipamentos com eficiência, atendendo às necessidades dos clientes 
-                        e proporcionando o sucesso de seus projetos. Nosso compromisso é oferecer um serviço excepcional, 
+                        Fornecer soluções de locação de equipamentos com eficiência, atendendo às necessidades dos
+                        clientes
+                        e proporcionando o sucesso de seus projetos. Nosso compromisso é oferecer um serviço
+                        excepcional,
                         um amplo inventário de equipamentos modernos e atendimento personalizado.
                     </p>
                 </div>
                 <div class="sobre-card">
                     <h3>Visão</h3>
                     <p>
-                        Ser a principal referência em locação de equipamentos, reconhecida pela excelência em serviços, 
-                        qualidade dos equipamentos e pela capacidade de atender às demandas dos clientes. Buscamos expandir 
+                        Ser a principal referência em locação de equipamentos, reconhecida pela excelência em serviços,
+                        qualidade dos equipamentos e pela capacidade de atender às demandas dos clientes. Buscamos
+                        expandir
                         nossa presença nacional e estabelecer parcerias duradouras.
                     </p>
                 </div>
                 <div class="sobre-card">
                     <h3>Valores</h3>
                     <p>
-                        Integridade, ética, transparência e honestidade em todas as relações com clientes, colaboradores e parceiros. 
+                        Integridade, ética, transparência e honestidade em todas as relações com clientes, colaboradores
+                        e parceiros.
                         Comprometimento com a excelência e a satisfação dos nossos clientes em cada projeto.
                     </p>
                 </div>
@@ -216,7 +225,8 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="depoimento-texto">
-                            "Excelente atendimento e equipamentos de primeira qualidade. A Locus Locações foi fundamental 
+                            "Excelente atendimento e equipamentos de primeira qualidade. A Locus Locações foi
+                            fundamental
                             para o sucesso do nosso evento corporativo."
                         </p>
                         <p class="depoimento-autor">- Maria Silva, Gerente de Eventos</p>
@@ -230,7 +240,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="depoimento-texto">
-                            "Profissionalismo e pontualidade impecáveis. Os climatizadores funcionaram perfeitamente 
+                            "Profissionalismo e pontualidade impecáveis. Os climatizadores funcionaram perfeitamente
                             durante todo o evento. Recomendo!"
                         </p>
                         <p class="depoimento-autor">- João Santos, Produtor</p>
@@ -245,7 +255,8 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="depoimento-texto">
-                            "Os aquecedores foram essenciais para o nosso evento de inverno. Atendimento e suporte impecáveis. Recomendo a Locus!"
+                            "Os aquecedores foram essenciais para o nosso evento de inverno. Atendimento e suporte
+                            impecáveis. Recomendo a Locus!"
                         </p>
                         <p class="depoimento-autor">- Pedro Rocha, Organizador de Eventos</p>
                     </div>
@@ -259,7 +270,8 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="depoimento-texto">
-                            "Qualidade superior e pontualidade na entrega e retirada dos equipamentos. A Locus Locações é nossa parceira oficial."
+                            "Qualidade superior e pontualidade na entrega e retirada dos equipamentos. A Locus Locações
+                            é nossa parceira oficial."
                         </p>
                         <p class="depoimento-autor">- Ana Costa, Gerente de Logística</p>
                     </div>
@@ -277,7 +289,8 @@
                 <div class="contato-form-wrapper">
                     <div class="form-card">
                         <h3>Solicite um Orçamento</h3>
-                        <p class="form-description">Preencha o formulário e entraremos em contato o mais breve possível.</p>
+                        <p class="form-description">Preencha o formulário e entraremos em contato o mais breve possível.
+                        </p>
                         <form id="contatoForm" onsubmit="enviarFormulario(event)">
                             <div class="form-group">
                                 <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
@@ -289,7 +302,8 @@
                                 <input type="tel" id="telefone" name="telefone" placeholder="Seu telefone" required>
                             </div>
                             <div class="form-group">
-                                <textarea id="mensagem" name="mensagem" placeholder="Descreva suas necessidades" rows="5" required></textarea>
+                                <textarea id="mensagem" name="mensagem" placeholder="Descreva suas necessidades"
+                                    rows="5" required></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary btn-full">Enviar via WhatsApp</button>
                         </form>
@@ -314,13 +328,15 @@
                     </div>
                     <div class="info-card">
                         <i class="fas fa-map-marker-alt"></i>
-			<div>
-    			    <h4>Localização</h4>
-    				<p>
-        			   <a href="https://maps.app.goo.gl/ZW47XpXBn8RKtSgc8" target="_blank" style="color: inherit; text-decoration: none;">
-            				Av. Joaquim Duarte Moleirinho, 4392 - Jardim Cidade Monções, Maringá - PR, 87060-350 </a>
-    				</p>
-			</div>
+                        <div>
+                            <h4>Localização</h4>
+                            <p>
+                                <a href="https://maps.app.goo.gl/ZW47XpXBn8RKtSgc8" target="_blank"
+                                    style="color: inherit; text-decoration: none;">
+                                    Av. Joaquim Duarte Moleirinho, 4392 - Jardim Cidade Monções, Maringá - PR, 87060-350
+                                </a>
+                            </p>
+                        </div>
 
                     </div>
                     <div class="info-card whatsapp-card">
@@ -341,6 +357,15 @@
         <div class="container">
             <p>&copy; 2025 <span class="footer-logo">LOCUS Locações</span>. Todos os direitos reservados.</p>
             <p class="footer-subtitle">Especializada em locação de climatizadores e aquecedores</p>
+            <div class="social-links">
+                <a href="URL_DO_SEU_INSTAGRAM" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="URL_DO_SEU_FACEBOOK" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </div>
+
         </div>
     </footer>
 
@@ -351,5 +376,5 @@
 
     <script src="js/script.js"></script>
 </body>
-</html>
 
+</html>
